--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,10 +13,12 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFxiDXf1Vehu_K9kHmM9KIGwwFrMKQG5E"
-      defer
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
